# bitcoin-gui-rs

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
bitcoin-gui/: package-lock.json  package.json
bitcoin-gui/src/: App.tsx  main.tsx
bitcoin-gui/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
bitcoin-gui/src-tauri/src/: blockchain_info.rs  chain.rs  commands.rs  connection.rs  lib.rs  main.rs  structs.rs  wallet.rs  wallet_actions.rs
bitcoin-gui/src/component/BlockchainInfo/: BlockchainInfo.tsx
bitcoin-gui/src/component/Loader/: Loader.tsx
bitcoin-node/: Cargo.toml
blockconnect/: Cargo.toml
blockconnect/schema/: chain.capnp
blockconnect/src/: chain.rs  connection.rs  error.rs  lib.rs  notification.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: blockchain_info.rs  lib.rs
src/component/BlockchainInfo/: BlockchainInfo.tsx
src/component/Dashboard/: Dashboard.tsx
src/component/WalletActions/: WalletActions.tsx
