[package]
name = "bitcoin-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bitcoin_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
capnpc = "0.19.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoincore-rpc = "0.19.0"
bitcoin = "0.32.5"
capnp = "0.19.3"
capnp-rpc = "0.19.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "process", "full", "rt", "macros", "time"] }
tokio-util = { version = "0.7.10", features = ["full"] }
futures-util = "0.3.31"
log = "0.4.26"
async-trait = "0.1.87"
thiserror = "2.0.12"
futures = "0.3.31"
blockconnect = { path = "../../blockconnect" }
dotenv = "0.15.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }
